{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 44,
  "lineage": "13a7e5b2-9c85-c635-efdc-39adbe4e0823",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip_nat_gateway_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-034292113e848c76d",
            "arn": "arn:aws:ec2:us-east-1:513794908995:elastic-ip/eipalloc-034292113e848c76d",
            "association_id": "eipassoc-01198b2167e12a035",
            "domain": "vpc",
            "id": "eipalloc-034292113e848c76d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-070fea5ea94391b53",
            "private_dns": "ip-10-0-0-23.ec2.internal",
            "private_ip": "10.0.0.23",
            "public_dns": "ec2-44-193-93-220.compute-1.amazonaws.com",
            "public_ip": "44.193.93.220",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Enviroment": "production",
              "Name": "nsse-production-eip-nat-gateway-1a",
              "Project": "nsse"
            },
            "tags_all": {
              "Enviroment": "production",
              "Name": "nsse-production-eip-nat-gateway-1a",
              "Project": "nsse"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip_nat_gateway_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06e3a93810868a632",
            "arn": "arn:aws:ec2:us-east-1:513794908995:elastic-ip/eipalloc-06e3a93810868a632",
            "association_id": "eipassoc-0b3b7b91c4203f0b0",
            "domain": "vpc",
            "id": "eipalloc-06e3a93810868a632",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0707b872f40ea5013",
            "private_dns": "ip-10-0-0-93.ec2.internal",
            "private_ip": "10.0.0.93",
            "public_dns": "ec2-44-198-196-36.compute-1.amazonaws.com",
            "public_ip": "44.198.196.36",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Enviroment": "production",
              "Name": "nsse-production-eip-nat-gateway-1b",
              "Project": "nsse"
            },
            "tags_all": {
              "Enviroment": "production",
              "Name": "nsse-production-eip-nat-gateway-1b",
              "Project": "nsse"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "nsse_production_vpc_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513794908995:internet-gateway/igw-046b0946bb31cc035",
            "id": "igw-046b0946bb31cc035",
            "owner_id": "513794908995",
            "tags": {
              "Enviroment": "production",
              "Name": "nsse-production-vpc-internet-gateway",
              "Project": "nsse"
            },
            "tags_all": {
              "Enviroment": "production",
              "Name": "nsse-production-vpc-internet-gateway",
              "Project": "nsse"
            },
            "vpc_id": "vpc-071bc4f30ff6cc98c"
          },
          "dependencies": [
            "aws_vpc.nsse_production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-034292113e848c76d",
            "association_id": "eipassoc-01198b2167e12a035",
            "connectivity_type": "public",
            "id": "nat-07371db8af33d9818",
            "network_interface_id": "eni-070fea5ea94391b53",
            "private_ip": "10.0.0.23",
            "public_ip": "44.193.93.220",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e931a4a57fa8eec9",
            "tags": {
              "Enviroment": "production",
              "Name": "nsse-production-vpc-nat-gateway-1a",
              "Project": "nsse"
            },
            "tags_all": {
              "Enviroment": "production",
              "Name": "nsse-production-vpc-nat-gateway-1a",
              "Project": "nsse"
            }
          },
          "dependencies": [
            "aws_eip.elastic_ip_nat_gateway_1a",
            "aws_subnet.public_subnets",
            "aws_vpc.nsse_production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06e3a93810868a632",
            "association_id": "eipassoc-0b3b7b91c4203f0b0",
            "connectivity_type": "public",
            "id": "nat-079f133e09b9fe762",
            "network_interface_id": "eni-0707b872f40ea5013",
            "private_ip": "10.0.0.93",
            "public_ip": "44.198.196.36",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-069161942e0fc436b",
            "tags": {
              "Enviroment": "production",
              "Name": "nsse-production-vpc-nat-gateway-1b",
              "Project": "nsse"
            },
            "tags_all": {
              "Enviroment": "production",
              "Name": "nsse-production-vpc-nat-gateway-1b",
              "Project": "nsse"
            }
          },
          "dependencies": [
            "aws_eip.elastic_ip_nat_gateway_1b",
            "aws_subnet.public_subnets",
            "aws_vpc.nsse_production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513794908995:route-table/rtb-038280e4070226def",
            "id": "rtb-038280e4070226def",
            "owner_id": "513794908995",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07371db8af33d9818",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Enviroment": "production",
              "Name": "nsse-production-vpc-private-route-table-1a",
              "Project": "nsse"
            },
            "tags_all": {
              "Enviroment": "production",
              "Name": "nsse-production-vpc-private-route-table-1a",
              "Project": "nsse"
            },
            "timeouts": null,
            "vpc_id": "vpc-071bc4f30ff6cc98c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic_ip_nat_gateway_1a",
            "aws_nat_gateway.nat_gateway_1a",
            "aws_subnet.public_subnets",
            "aws_vpc.nsse_production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513794908995:route-table/rtb-04d8d71d2f8225506",
            "id": "rtb-04d8d71d2f8225506",
            "owner_id": "513794908995",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-079f133e09b9fe762",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Enviroment": "production",
              "Name": "nsse-production-vpc-private-route-table-1b",
              "Project": "nsse"
            },
            "tags_all": {
              "Enviroment": "production",
              "Name": "nsse-production-vpc-private-route-table-1b",
              "Project": "nsse"
            },
            "timeouts": null,
            "vpc_id": "vpc-071bc4f30ff6cc98c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic_ip_nat_gateway_1b",
            "aws_nat_gateway.nat_gateway_1b",
            "aws_subnet.public_subnets",
            "aws_vpc.nsse_production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513794908995:route-table/rtb-00c9f6a2013712fc0",
            "id": "rtb-00c9f6a2013712fc0",
            "owner_id": "513794908995",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-046b0946bb31cc035",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Enviroment": "production",
              "Name": "nsse-production-vpc-public-route-table",
              "Project": "nsse"
            },
            "tags_all": {
              "Enviroment": "production",
              "Name": "nsse-production-vpc-public-route-table",
              "Project": "nsse"
            },
            "timeouts": null,
            "vpc_id": "vpc-071bc4f30ff6cc98c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.nsse_production_vpc_internet_gateway",
            "aws_vpc.nsse_production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0022548f13f4309cc",
            "route_table_id": "rtb-038280e4070226def",
            "subnet_id": "subnet-0a2fa80e8c3768d23"
          },
          "dependencies": [
            "aws_eip.elastic_ip_nat_gateway_1a",
            "aws_nat_gateway.nat_gateway_1a",
            "aws_route_table.private_route_table_1a",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.nsse_production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e01c172bb0a9723",
            "route_table_id": "rtb-04d8d71d2f8225506",
            "subnet_id": "subnet-08fa3444a19c4d898"
          },
          "dependencies": [
            "aws_eip.elastic_ip_nat_gateway_1b",
            "aws_nat_gateway.nat_gateway_1b",
            "aws_route_table.private_route_table_1b",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.nsse_production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c404be3814a05873",
            "route_table_id": "rtb-00c9f6a2013712fc0",
            "subnet_id": "subnet-0e931a4a57fa8eec9"
          },
          "dependencies": [
            "aws_internet_gateway.nsse_production_vpc_internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.nsse_production_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094b1147ae876e85f",
            "route_table_id": "rtb-00c9f6a2013712fc0",
            "subnet_id": "subnet-069161942e0fc436b"
          },
          "dependencies": [
            "aws_internet_gateway.nsse_production_vpc_internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.nsse_production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513794908995:subnet/subnet-0a2fa80e8c3768d23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2fa80e8c3768d23",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "513794908995",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Enviroment": "production",
              "Name": "nsse-production-vpc-private-subnet-1a",
              "Project": "nsse"
            },
            "tags_all": {
              "Enviroment": "production",
              "Name": "nsse-production-vpc-private-subnet-1a",
              "Project": "nsse"
            },
            "vpc_id": "vpc-071bc4f30ff6cc98c"
          },
          "dependencies": [
            "aws_vpc.nsse_production_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513794908995:subnet/subnet-08fa3444a19c4d898",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.96/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08fa3444a19c4d898",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "513794908995",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Enviroment": "production",
              "Name": "nsse-production-vpc-private-subnet-1b",
              "Project": "nsse"
            },
            "tags_all": {
              "Enviroment": "production",
              "Name": "nsse-production-vpc-private-subnet-1b",
              "Project": "nsse"
            },
            "vpc_id": "vpc-071bc4f30ff6cc98c"
          },
          "dependencies": [
            "aws_vpc.nsse_production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513794908995:subnet/subnet-0e931a4a57fa8eec9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e931a4a57fa8eec9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "513794908995",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Enviroment": "production",
              "Name": "nsse-production-vpc-public-subnet-1a",
              "Project": "nsse"
            },
            "tags_all": {
              "Enviroment": "production",
              "Name": "nsse-production-vpc-public-subnet-1a",
              "Project": "nsse"
            },
            "vpc_id": "vpc-071bc4f30ff6cc98c"
          },
          "dependencies": [
            "aws_vpc.nsse_production_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513794908995:subnet/subnet-069161942e0fc436b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.64/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069161942e0fc436b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "513794908995",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Enviroment": "production",
              "Name": "nsse-production-vpc-public-subnet-1b",
              "Project": "nsse"
            },
            "tags_all": {
              "Enviroment": "production",
              "Name": "nsse-production-vpc-public-subnet-1b",
              "Project": "nsse"
            },
            "vpc_id": "vpc-071bc4f30ff6cc98c"
          },
          "dependencies": [
            "aws_vpc.nsse_production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nsse_production_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513794908995:vpc/vpc-071bc4f30ff6cc98c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-068ce19cf367fa96b",
            "default_route_table_id": "rtb-0ee6c8eb2e7a22fe8",
            "default_security_group_id": "sg-088056a4f60aef323",
            "dhcp_options_id": "dopt-054c504a44f7b048a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-071bc4f30ff6cc98c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ee6c8eb2e7a22fe8",
            "owner_id": "513794908995",
            "tags": {
              "Enviroment": "production",
              "Name": "nsse-production-vpc",
              "Project": "nsse"
            },
            "tags_all": {
              "Enviroment": "production",
              "Name": "nsse-production-vpc",
              "Project": "nsse"
            }
          }
        }
      ]
    }
  ]
}